Fixing the build to handle grid test cases