@@ -203,61 +203,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-
-
-            <!--plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
-            </plugin -->
-            <!--plugin>
-                <groupId>org.codehaus.cargo</groupId>
-                <artifactId>cargo-maven2-plugin</artifactId>
-                <version>1.3.1</version>
-                <configuration>
-
-                    <container>
-                        <containerId>tomcat${major.tomcat.version}x</containerId>
-                        <type>installed</type>
-                        <home>${tomcat.work.dir}</home>
-                    </container>
-
-                    <configuration>
-                        <properties>
-                            <cargo.servlet.port>${test.running.port}</cargo.servlet.port>
-                            <cargo.tomcat.ajp.port>9009</cargo.tomcat.ajp.port>
-                            <cargo.rmi.port>9099</cargo.rmi.port>
-                            <cargo.jvmargs>
-                                -Xms512m
-                                -Xmx512m
-                                -XX:MaxPermSize=256m
-                            </cargo.jvmargs>
-                            <cargo.tomcat.context.reloadable>true</cargo.tomcat.context.reloadable>
-                        </properties>
-                        <type>existing</type>
-                        <home>${tomcat.work.dir}</home>
-
-                    </configuration>
-
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>start-container</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>start</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop-container</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin-->
         </plugins>
     </build>
 
